--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html">
+<!DOCTYPE html">
 <html>
 <head>
 <meta charset="utf-8" name="author" content="Аргентов И. А., Ефимцева А. А." >
@@ -48,8 +48,8 @@ max-width:680px;
 .pot-unem{
 margin-left: auto;
 margin-right:auto;
-min-width:470px;
-max-width:470px;
+min-width:480px;
+max-width:480px;
 
 }
 
@@ -82,9 +82,9 @@ background:white;
 display: inline-block;	
 border: 2px solid green;	
 border-radius: 30px;	
-min-width: 130px;
-max-width: 130px;
-margin-left: 40px;
+min-width: 140px;
+max-width: 140px;
+margin-left: 35px;
 margin-right: auto;
 margin-top:5px;
 margin-bottom:5px;
