--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html">
+﻿<!DOCTYPE html">
 <html>
 <head>
 <meta charset="utf-8" name="author" content="Аргентов И. А., Ефимцева А. А." >
@@ -113,26 +113,26 @@ margin-bottom:5px;
 
 <div class="listok">
 
-<div class="wood"><a href="blocked.htm">Аббазов А. Э.</a></div>
-<div class="wood"><a href="blocked.htm">Акбаров А. Я.</a></div>
-<div class="wood"><a href="blocked.htm">Альбаева Р. Х.</a></div>
-<div class="wood"><a href="blocked.htm">Аргентов И. А.</a></div>
-<div class="wood"><a href="blocked.htm">Бакуменко А. Ю.</a></div>
-<div class="wood"><a href="blocked.htm">Губа В. А.</a></div>
-<div class="wood"><a href="blocked.htm">Ефимцева А. А.</a></div>
-<div class="wood"><a href="blocked.htm">Иргашев В. В.</a></div>
-<div class="wood"><a href="blocked.htm">Казанцева Л. И.</a></div>
-<div class="wood"><a href="blocked.htm">Каурова В. Е.</a></div>
-<div class="wood"><a href="blocked.htm">Кравцова Н. А.</a></div>
-<div class="wood"><a href="blocked.htm">Назарова А. Я.</a></div>
-<div class="wood"><a href="blocked.htm">Накаев Д. Ж.</a></div>
+<div class="wood"><a href="https://vk.com/id292125747">Аббазов А. Э.</a></div>
+<div class="wood"><a href="https://vk.com/id339459956">Акбаров А. Я.</a></div>
+<div class="wood"><a href="https://vk.com/id102281023">Альбаева Р. Х.</a></div>
+<div class="wood"><a href="https://vk.com/id122540787">Аргентов И. А.</a></div>
+<div class="wood"><a href="https://vk.com/id124873646">Бакуменко А. Ю.</a></div>
+<div class="wood"><a href="https://vk.com/guba_official">Губа В. А.</a></div>
+<div class="wood"><a href="https://vk.com/efimceva_n">Ефимцева А. А.</a></div>
+<div class="wood"><a href="https://vk.com/panda_moscow_official">Иргашев В. В.</a></div>
+<div class="wood"><a href="https://vk.com/ludmilarrr">Казанцева Л. И.</a></div>
+<div class="wood"><a href="https://vk.com/id372875118">Каурова В. Е.</a></div>
+<div class="wood"><a href="https://vk.com/dusyadura">Кравцова Н. А.</a></div>
+<div class="wood"><a href="https://vk.com/idalexandranazarova">Назарова А. Я.</a></div>
+<div class="wood"><a href="https://vk.com/id35983200">Накаев Д. Ж.</a></div>
 <div class="wood"><a href="blocked.htm">Огурцов С. А.</a></div>
-<div class="wood"><a href="blocked.htm">Сидоренко Д. Н.</a></div>
+<div class="wood"><a href="https://vk.com/davidvonkrut">Сидоренко Д. Н.</a></div>
 <div class="wood"><a href="blocked.htm">Соселию Н. Т.</a></div>
-<div class="wood"><a href="blocked.htm">Терновой Н. А.</a></div>
-<div class="wood"><a href="blocked.htm">Умеренкова Е. А.</a></div>
-<div class="wood"><a href="blocked.htm">Цинклер Д. А.</a></div>
-<div class="wood"><a href="blocked.htm">Шевченко С. С.</a></div>
+<div class="wood"><a href="https://vk.com/kolyanone">Терновой Н. А.</a></div>
+<div class="wood"><a href="https://vk.com/id88366429">Умеренкова Е. А.</a></div>
+<div class="wood"><a href="https://vk.com/tsinklerdi">Цинклер Д. А.</a></div>
+<div class="wood"><a href="https://vk.com/nyako_sama">Шевченко С. С.</a></div>
 
 </div>
 <footer>
