--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ margin-left: 35px;
 margin-right: auto;
 margin-top:5px;
 margin-bottom:5px;
+
 	}
 </style>
 </head>
@@ -126,9 +127,9 @@ margin-bottom:5px;
 <div class="wood"><a href="https://vk.com/dusyadura">Кравцова Н. А.</a></div>
 <div class="wood"><a href="https://vk.com/idalexandranazarova">Назарова А. Я.</a></div>
 <div class="wood"><a href="https://vk.com/id35983200">Накаев Д. Ж.</a></div>
-<div class="wood"><a href="blocked.htm">Огурцов С. А.</a></div>
+<div class="wood"><a href="https://vk.com/lievile">Огурцов С. А.</a></div>
 <div class="wood"><a href="https://vk.com/davidvonkrut">Сидоренко Д. Н.</a></div>
-<div class="wood"><a href="blocked.htm">Соселию Н. Т.</a></div>
+<div class="wood"><a href="https://vk.com/id446784507">Соселию Н. Т.</a></div>
 <div class="wood"><a href="https://vk.com/kolyanone">Терновой Н. А.</a></div>
 <div class="wood"><a href="https://vk.com/id88366429">Умеренкова Е. А.</a></div>
 <div class="wood"><a href="https://vk.com/tsinklerdi">Цинклер Д. А.</a></div>
