--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ margin-bottom:5px;
 </div>
 <footer>
 <p>
-<sub>Личная договоренность с преподом. Выполнили Аргентов И.А. и Ефимцева А.А.</sub>
+<sub>Выполнили Аргентов И.А. и Ефимцева А.А.</sub>
 </p>
 </footer>
 </body>
